syntax = "proto2";
package packybara;

service Packybara {
  rpc GetVersionPinGr(VersionPinQueryRequest) returns (VersionPinQueryReply) {}
  rpc GetVersionPinsGr(VersionPinsQueryRequest)
      returns (VersionPinsQueryReply) {}
}
// GET VERSION PIN
//---------------------------
message VersionPinQueryRequest {
  required string package = 1;
  optional string level = 2;
  optional string role = 3;
  optional string platform = 4;
  optional string site = 5;
}

message Coords {
  required string level = 1;
  required string role = 2;
  required string platform = 3;
  required string site = 4;
}

// From packybara::db::find::versionpins.rs
message VersionPinQueryReply {
  required int64 versionpin_id = 1;
  required string distribution = 2;
  required Coords coords = 3;
  repeated string withs = 4;
}
//----------------------------

// GET VERSIONPINS
// ---------------------------

message VersionPinsQueryRequest {
  optional string package = 1;
  optional string version = 2;
  optional string level = 3;
  optional string role = 4;
  optional string platform = 5;
  optional string site = 6;
  optional string search_mode = 7;
  optional string limit = 8;
  optional string order_by = 9;
  optional string order_direction = 10;
  optional bool full_withs = 11;
  optional bool isolate_facility = 12;
}
message VersionPinsQueryRow {
  required int64 versionpin_id = 1;
  required int64 distribution_id = 2;
  required int64 pkgcoord_id = 3;
  required string distribution = 4;
  required Coords coords = 5;
  repeated string withs = 6;
}
message VersionPinsQueryReply { repeated VersionPinsQueryRow vpins = 1; }
//-------------------------------